--- a/index.html
+++ b/index.html
@@ -3,10 +3,40 @@
 <head>
 <meta charset="utf-8"> 
 <link rel="stylesheet" type="text/css" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700" rel="stylesheet">
 <title>Company name - home page</title>
 </head>
 
 <body>
-
+    <header>
+        <div class="center-block-main">
+            <div class="header-top">
+                <p class="logo">BIRUANG</p>
+                <div class="contact-basket">
+                    <p class="header-phone"><img src="images/ico-phone.jpg" alt="+371 282 20 760">+371 282 20 760</p>
+                    <p class="header-basket"><img src="images/ico-basket.jpg" alt="$ 99.54">$ 99.54 <a href="#">Checkout</a></p>
+                </div>
+            </div>
+            <div class="header-bottom">
+                <nav>
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">MEN</a></li>
+                        <li><a href="#">WOMEN</a></li>
+                        <li><a href="#">KIDS</a></li>
+                        <li><a href="#">SALE</a></li>
+                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="#">SUPPORT</a></li>
+                    </ul>
+                </nav>
+                <div class="search-block">
+                    <form action="" method="get">
+                        <input type="image" src="images/search-btn.jpg" class="search-btn">
+                        <input type="search" class="search" placeholder="Search...">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
