--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="center-block-main">
-            <div class="header-top">
+            <div class="header-top clearfix">
                 <p class="logo">BIRUANG</p>
                 <div class="contact-basket">
                     <p class="header-phone"><img src="images/ico-phone.jpg" alt="+371 282 20 760">+371 282 20 760</p>
