--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="header-bottom">
                 <nav>
-                    <ul>
+                    <ul class="menu">
                         <li><a href="#">HOME</a></li>
                         <li><a href="#">MEN</a></li>
                         <li><a href="#">WOMEN</a></li>
