--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8"> 
 <link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="css/unslider.css" />
+<link rel="stylesheet" type="text/css" href="css/unslider-dots.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700" rel="stylesheet">
 <title>Company name - home page</title>
 </head>
@@ -17,7 +19,7 @@
                     <p class="header-basket"><img src="images/ico-basket.jpg" alt="$ 99.54">$ 99.54 <a href="#">Checkout</a></p>
                 </div>
             </div>
-            <div class="header-bottom">
+            <div class="header-bottom clearfix">
                 <nav>
                     <ul class="menu">
                         <li><a href="#">HOME</a></li>
@@ -38,5 +40,42 @@
             </div>
         </div>
     </header>
+    <div class="my-slider center-block-main">
+        <ul>
+            <li>
+                <h2>RIGHT IS PINK. <br>
+                    LEFT IS BLUE</h2>
+                <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch <br>
+                    playmakers, these kicks are ready to stand out.</p>
+                <img src="images/slide1.jpg" alt="">
+            </li>
+            <li>
+                <h2>RIGHT IS PINK. <br>
+                    LEFT IS BLUE</h2>
+                <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch <br>
+                    playmakers, these kicks are ready to stand out.</p>
+                <img src="images/slide1.jpg" alt="">
+            </li>
+            <li>
+                <h2>RIGHT IS PINK. <br>
+                    LEFT IS BLUE</h2>
+                <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch <br>
+                    playmakers, these kicks are ready to stand out.</p>
+                <img src="images/slide1.jpg" alt="">
+            </li>
+        </ul>
+    </div>
+
+
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="js/unslider-min.js"></script>
+    <script>
+        $(function() {
+            $('.my-slider').unslider({
+                autoplay:true,
+                arrows:false
+            });
+        });
+    </script>
 </body>
 </html>
