news block added

--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
         </ul>
     </div>
 
+    <div class="block3main center-block-main clearfix">
+        <article>
+            <img src="images/img31.jpg" alt="">
+            <h2><a href="">FOOTBALL SHOES</a></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing, <br>
+                vivamus congue nulla leo, quis imperdiet magna.</p>
+        </article>
+        <article>
+            <img src="images/img32.jpg" alt="">
+            <h2><a href="">MODERN CLOTHES</a></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing, <br>
+                vivamus congue nulla leo, quis imperdiet magna.</p>
+        </article>
+        <article>
+            <img src="images/img33.jpg" alt="">
+            <h2><a href="">BAGS & ACCESSORIES</a></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing, <br>
+                vivamus congue nulla leo, quis imperdiet magna.</p>
+        </article>
+    </div>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/unslider-min.js"></script>
