map section added

--- a/index.html
+++ b/index.html
@@ -153,12 +153,28 @@
 
 
 
-
-
-
-
-
-
+<div class="about center-block-main clearfix">
+    <article>
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dictum lectus sit amet varius pulvinar. Proin vitae
+            dui tincidunt nibh facilisis pellentesque.  Fusce tortor turpis, facilisis ut condimentum eu, sagittis at est.
+        </p><p>
+            Praesent egestas posuere urna a egestas. Maecenas facilisis orci vitae ante  tempor accumsan. Aenean aliquam
+            justo ac sagittis vehicula. Nam mattis pretium odio sit amet vulputate.
+    </p><p>
+            Quisque non lobortis orci. Morbi augue mauris, ultrices at fermentum ac, consequat vitae magna. Pellentesque
+            non cursus mi, eu cursus nunc. Nullam  et odio tristique, volutpat urna vitae, dignissim orci. Fusce eu nulla urna.
+            This template was created by Erik Padamans.
+    </p><p>
+            Praesent egestas posuere urna a egestas. Maecenas facilisis orci vitae ante  tempor accumsan. Aenean aliquam
+            justo ac sagittis vehicula. Nam mattis pretium odio sit amet vulputate.</p>
+    </article>
+    <div class="map">
+        <div class="map-in">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10751.519300081767!2d-122.3461651!3d47.647902099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x339246876cba663!2sPCC+Community+Markets+-+Fremont!5e0!3m2!1sen!2sus!4v1547622194491" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
 
 
 
