Subscribe section added

--- a/index.html
+++ b/index.html
@@ -176,7 +176,17 @@
     </div>
 </div>
 
-
+<div class="subscribe">
+    <div class="center-block-main clearfix">
+        <h2><strong>Sign up</strong> for exclusive sales and product news</h2>
+        <div class="subscribe-form">
+            <form action="" method="get">
+                <input type="email" class="email-inpt" placeholder="vasikanava@gmail.com">
+                <input type="submit" class="submit-inpt" value="sign up">
+            </form>
+        </div>
+    </div>
+</div>
 
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
