--- a/index.html
+++ b/index.html
@@ -188,6 +188,71 @@
     </div>
 </div>
 
+    <footer class="ftr">
+            <div class="block4-main center-block-main clearfix">
+                <article>
+                <h2>Our Stores</h2>
+                    <div class="ftr-block-content">
+                                <p>Feel free to visit our stores or contact us.
+                                    1401 South Grand Avenue
+                                    Los Angeles, CA 90015
+                                    (213) 748-2411</p>
+                        <p>100 Fairview Drive
+                            Franklin, VA 23851
+                            (757) 569-6100</p>
+                    </div>
+                </article>
+                <article>
+                    <h2>Blog posts</h2>
+                    <div class="ftr-block-content">
+                            <h3><a href="">Justin Bieber confirmed that he is gay.</a>
+                            </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Donec sed auctor elit.</p>
+                                <h3><a href="">New sexy sport clothes are here!</a></h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Donec sed auctor elit.</p>
+                        <h3><a href="">Summer sales are coming!</a></h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Donec sed auctor elit. </p>
+                    </div>
+                </article>
+                <article>
+                    <h2>Support</h2>
+                    <div class="ftr-block-content">
+                        <p class="support">
+                            <a href="#">Terms & Conditions</a>
+                            <a href="#">FAQ</a>
+                            <a href="#">Payment</a>
+                            <a href="#">Refunds</a>
+                            <a href="#">Services</a>
+                            <a href="#">Privacy & Security</a>
+                            <a href="#">Careers</a>
+                            <a href="#">Press</a>
+                        </p>
+                        <p class="support">
+                            <a href="#">Sizing</a>
+                            <a href="#">Ordering</a>
+                            <a href="#">Shipping</a>
+                            <a href="#">Return Policy</a>
+                            <a href="#">Affiliates</a>
+                            <a href="#">Find A Store </a>
+                            <a href="#">Site Map</a>
+
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <h2>Contact us</h2>
+                    <div class="ftr-block-content">
+                        <input type="email" class="ftrmail" placeholder="your email...">
+                        <textarea class="ftrtext" placeholder="your text..."></textarea>
+                        <input type="submit" class="ftrsubmit" value="Send MESSAGE">
+                    </div>
+                </article>
+            </div>
+    </footer>
+
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/unslider-min.js"></script>
